<resources>
    <string name="app_name">Happid</string>
    <string name="dummy_text">O On-Time Departures. Pay just for your seat. No Refusal from our end. Spacious &amp; Comfortable Seating. Female passengers safety standards. Onboard Refreshments. Cab Tracking through Maps</string>
    <string name="continue_lable">Continue</string>
    <string name="request_otp">Request OTP</string>
    <string name="join_with">Join with</string>
    <string name="login_tc">By creating passcode you are agree of our Teams and Condition and Privacy Policy </string>
    <string name="error"><font fgcolor="#000000">By creating passcode you are agree of our</font><font fgcolor="#FF7F5D">\nTeams and Condition!</font><font fgcolor="#000000"> and </font><font fgcolor="#FF7F5D">Privacy Policy.</font></string>
    <string name="_91">+91</string>
    <string name="sign_in_text">Your confirmation code is below - Enter \nit and we\'ll help you sign in</string>
    <string name="okay">Okay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Find Nearest Local \nMarket</string>
    <string name="don_t_receive_otp_resend">don\'t receive OTP?<font fgcolor="#FF7F5D"> Resend</font></string>
    <string name="get_started">Get Started</string>
    <string name="submit">Submit</string>
    <string name="create_profile">Create Profile</string>
    <string name="set_profile">Set Profile</string>
    <string name="first_name">First Name</string>
    <string name="pick_your_current_location">Pick your current location</string>
    <string name="post_code">Post Code</string>
</resources>